src/test/ui/consts/const-array-oob.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-array-oob.rs:6:19
   |
LL | const BLUB: [u32; FOO[4]] = [5, 6];
   |                   ^^^^^^ index out of bounds: the len is 3 but the index is 4

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
